--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,6 +9,12 @@
 html,
 body,
 .wrapper {
+  background-color: #c4d7d2;
+  background-image: linear-gradient(
+    rgb(205, 230, 223),
+    rgb(181, 196, 191),
+    rgb(144, 150, 149)
+  );
   height: 100%;
 }
 
@@ -17,11 +23,11 @@ body {
 }
 
 nav {
-  background-color: #57fdbd;
-  color: #47011eef;
+  background-color: rgb(205, 230, 223);
   height: 80px;
   padding: 10px;
   line-height: 3;
+  font-weight: 900;
   font-size: 1.2rem;
 }
 
@@ -100,7 +106,6 @@ input {
 }
 
 .wrapper {
-  background-color: #f2f8ff;
   padding-bottom: 100px;
 }
 
